--- a/typ-editor/src/app/polygone/polygone.component.css
+++ b/typ-editor/src/app/polygone/polygone.component.css
@@ -28,7 +28,7 @@ mat-slider {
 
 .item {
     color: #ffffff;
-    padding: 1em 1em;
+    padding: 0.5em 1em;
     text-transform: uppercase;
 }
 
