--- a/typ-editor/src/app/polyline/polyline.component.css
+++ b/typ-editor/src/app/polyline/polyline.component.css
@@ -1,6 +1,3 @@
-.container {
-    max-height: 4%;
-}
 
 mat-grid-tile {
     background:rgb(243, 241, 245);
@@ -28,7 +25,7 @@ mat-slider {
 
 .item {
     color: #ffffff;
-    padding: 1em 1em;
+    padding: 0.5em 1em;
     text-transform: uppercase;
 }
 
